fixed text wrapping on buttons

--- a/chooseASide/static/css/styles.css
+++ b/chooseASide/static/css/styles.css
@@ -8,3 +8,9 @@ body {
 .card {
     border-color: black
 }
+
+.btn {
+    white-space:normal !important;
+
+    max-width: 100%;
+}
